SERVER-79682: Ensure the opCtx is interrupted during a stepdown for the shardSvrReshardCollection cmd.

(cherry picked from commit 90680ac48281685551dad1253986be0c50de84bc)